[package]
name = "vertical-fire-platform"
version = "1.4.1"
edition = "2021"
authors = ["LviatYi"]
build = "build.rs"
description = "⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠐⠒⠒⠒⠒⠚⠛⣿⡟ |  ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄\n⠄⠄⢠⠄⠄⠄⡄⠄⠄⣠⡶⠶⣶⠶⠶⠂⣠⣶⣶⠂⠄⣸⡿⠄ |  ⠄⠄⠄⠄⠄⠄⠛⢿⣿⣿⠛⠛⠛⣿⣿⣦⠄⠄⠄⠄⠄⠄⠄⠄\n⠄⢀⣿⠇⠄⣰⡿⣠⡾⠋⠄⣼⡟⠄⣠⡾⠋⣾⠏⠄⢰⣿⠁⠄ |  ⠄⠄⠄⠄⠄⠄⠄⢸⣿⣿⣤⣤⣤⣿⣿⠃⠄⡀⠄⠄⠄⠄⠄⠄\n⠄⣾⡏⠄⠠⠿⠿⠋⠠⠶⠶⠿⠶⠾⠋⠄⠽⠟⠄⠄⠄⠃⠄⠄ |  ⠄⠄⠄⠄⠄⠄⣤⣼⣿⣿⣤⡀⠉⣿⣿⣦⣤⣿⠄⠄⠄⠄⠄⠄\n⣼⣿⣤⡤⠤⠤⠤⠤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄ |  ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄\n\nDestroy all obstacles in the way of development!\nPowered by LviatYi & RUST\n"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
configparser = "3.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
formatx = "0.2.2"
inquire = "0.7.5"
jenkins-sdk = "0.1.5"
rand = "0.9.0-alpha.2"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
strum_macros = "0.26.4"
toml = "0.8.19"
zip = "2.2.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["cookies"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
chrono = "0.4.40"
win-toast-notify = "0.1.6"
base64 = "0.22.1"
quick-xml = { version = "0.37.4", features = ["serialize"] }

[[bin]]
name = "fp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.14.0"

[build-dependencies]
regex = "1.11.1"
