[package]
name = "vertical-fire-platform"
version = "1.6.3"
edition = "2024"
authors = ["LviatYi"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/LviatYi/vertical-fire-platform"
description = "⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠐⠒⠒⠒⠒⠚⠛⣿⡟ |  ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄\n⠄⠄⢠⠄⠄⠄⡄⠄⠄⣠⡶⠶⣶⠶⠶⠂⣠⣶⣶⠂⠄⣸⡿⠄ |  ⠄⠄⠄⠄⠄⠄⠛⢿⣿⣿⠛⠛⠛⣿⣿⣦⠄⠄⠄⠄⠄⠄⠄⠄\n⠄⢀⣿⠇⠄⣰⡿⣠⡾⠋⠄⣼⡟⠄⣠⡾⠋⣾⠏⠄⢰⣿⠁⠄ |  ⠄⠄⠄⠄⠄⠄⠄⢸⣿⣿⣤⣤⣤⣿⣿⠃⠄⡀⠄⠄⠄⠄⠄⠄\n⠄⣾⡏⠄⠠⠿⠿⠋⠠⠶⠶⠿⠶⠾⠋⠄⠽⠟⠄⠄⠄⠃⠄⠄ |  ⠄⠄⠄⠄⠄⠄⣤⣼⣿⣿⣤⡀⠉⣿⣿⣦⣤⣿⠄⠄⠄⠄⠄⠄\n⣼⣿⣤⡤⠤⠤⠤⠤⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄ |  ⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄\n\nDestroy all obstacles in the way of development!\nPowered by LviatYi & RUST\n\nGet More Info at:\nhttps://github.com/LviatYi/vertical-fire-platform\n"
publish = false

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
configparser = "3.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
formatx = "0.2.2"
inquire = "0.7.5"
jenkins-sdk = "=0.1.5"
rand = "0.9.0-alpha.2"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
strum_macros = "0.26.4"
toml = "0.8.19"
zip = "4.3.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["cookies"] }
async-trait = "0.1.88"
chrono = "0.4.40"
win-toast-notify = "0.1.6"
base64 = "0.22.1"
quick-xml = { version = "0.38.1", features = ["serialize"] }
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate"] }
semver = "1.0.26"
sanitize-filename = "0.6.0"
url = "2.5.4"
open = "5.3.2"

[[bin]]
name = "fp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.14.0"
